# ThermoElastic-Topology-Optimization

./: CMakeCache.txt  CMakeLists.txt  Compile Instruction for code with Eigen.txt  Eigen_tutorial.cpp  FEA Based Solver.vcxproj  FEA Based Solver.vcxproj.filters  FEATawkConstDT.csv  FEATawkConstDT1.csv  FEATawkVaryDT.csv  FEATawkVaryDT1.csv  FEATawkVaryDT28.csv  HXprobFEA3D.csv  HXprobFEA3D2.csv  HXprobFEA3D3.csv  HXprobFEA3DConstDT.csv  HXprobFEA3DConstDT2.csv  HXprobFEA3DSolidCFDT.csv  HXprobFEA3DVaryAllDT.csv  HXprobFEAAdjVelInnerWall.csv  HXprobFEAAdjVelOuterWall.csv  HXprobFEAAdjVelPipe2L.csv  HXprobFEAAdjVelnTemp.csv  HXprobFEAaDJvEL.csv  HeatExchangerResults.vtu  HeatExchangerResults2.vtu  HeatExchangerResults3.vtu  HeatExchangerResults4.vtu  HeatExchangerResults5.vtu  HeatExchangerResults6.vtu  HeatExchangerResults7.vtu  Makefile  cmake_install.cmake  simple1D prob.csv  velocity_data2.csv  velocity_data_tawk.csv
Results/: HeatExchangerResults10.vtu  HeatExchangerResults100.vtu  HeatExchangerResults101.vtu  HeatExchangerResults102.vtu  HeatExchangerResults103.vtu  HeatExchangerResults104.vtu  HeatExchangerResults105.vtu  HeatExchangerResults106.vtu  (+239 more)
Results 70_80/: HeatExchangerResults0.vtu  HeatExchangerResults1.vtu  HeatExchangerResults10.vtu  HeatExchangerResults100.vtu  HeatExchangerResults101.vtu  HeatExchangerResults102.vtu  HeatExchangerResults103.vtu  HeatExchangerResults104.vtu  HeatExchangerResults105.vtu  HeatExchangerResults106.vtu  HeatExchangerResults107.vtu  HeatExchangerResults108.vtu  HeatExchangerResults109.vtu  HeatExchangerResults11.vtu  HeatExchangerResults110.vtu  HeatExchangerResults111.vtu  HeatExchangerResults112.vtu  HeatExchangerResults113.vtu  HeatExchangerResults114.vtu  HeatExchangerResults115.vtu  HeatExchangerResults116.vtu  HeatExchangerResults117.vtu  HeatExchangerResults118.vtu  HeatExchangerResults119.vtu  HeatExchangerResults12.vtu  HeatExchangerResults120.vtu  HeatExchangerResults121.vtu  HeatExchangerResults122.vtu  HeatExchangerResults123.vtu  HeatExchangerResults124.vtu  HeatExchangerResults125.vtu  HeatExchangerResults126.vtu  HeatExchangerResults127.vtu  HeatExchangerResults128.vtu  HeatExchangerResults129.vtu  HeatExchangerResults13.vtu  HeatExchangerResults130.vtu  HeatExchangerResults131.vtu  HeatExchangerResults14.vtu  HeatExchangerResults15.vtu  (+94 more)
src/: Main.cpp  (+17 more)
(+11 files in other folders)
